バイオレット1.0

--- a/roguin.html
+++ b/roguin.html
@@ -46,7 +46,7 @@
   <div class="container">
     <h1>絶対に有名になれるSNS</h1>
     <p>ユーザーネームを入力してください</p>
-    <input type="text" id="username" placeholder="例: ゆうた">
+    <input type="text" id="username" placeholder="例: バイオレット">
     <br>
     <button onclick="goToIndex()">投稿画面へ</button>
   </div>
