--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
+ぬ<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>絶対に有名になれるSNS - 投稿</title>
 <style>
@@ -747,19 +747,54 @@ form.addEventListener("submit", function(e){
   const negativeComments = commentsData[type].negative;
   let totalComments = 0;
 
-  function addComment(){
-    if(totalComments >= 100) return;
-    const div = document.createElement("div");
+function addComment() {
+  if (totalComments >= 100) return;
+
+  const div = document.createElement("div");
+  let commentText = "";
+  let className = "";
+
+  if (totalComments < 5) {
+    // 最初の5コメント：ポジティブ
+    commentText = positiveComments[Math.floor(Math.random() * positiveComments.length)];
+    className = "comment positive";
+  } else if (totalComments < 10) {
+    // 次の5コメント：ネガティブ
+    commentText = negativeComments[Math.floor(Math.random() * negativeComments.length)];
+    className = "comment negative";
+  } else if (totalComments < 30) {
+    // 次の20コメント：ランダム
     const isPositive = Math.random() < 0.5;
-    div.className = "comment " + (isPositive ? "positive":"negative");
-    div.textContent = isPositive
-      ? positiveComments[Math.floor(Math.random()*positiveComments.length)]
-      : negativeComments[Math.floor(Math.random()*negativeComments.length)];
-    commentsArea.appendChild(div);
-    div.scrollIntoView({behavior:"smooth"});
-    totalComments++;
-    setTimeout(addComment, 3000 + Math.random()*4000); // 3〜7秒ランダム
+    commentText = isPositive
+      ? positiveComments[Math.floor(Math.random() * positiveComments.length)]
+      : negativeComments[Math.floor(Math.random() * negativeComments.length)];
+    className = "comment " + (Math.random() < 0.5 ? "positive" : "negative");
+  } else {
+    // 30コメント超えた場合
+    commentText = "🔥炎上しました🔥";
+    className = "comment negative";
+
+    // ネガティブコメントを2秒間に5コメント（400msごと）で流す
+    let flameCount = 0;
+    const flameInterval = setInterval(() => {
+      const flameDiv = document.createElement("div");
+      flameDiv.className = "comment negative";
+      flameDiv.textContent = negativeComments[Math.floor(Math.random() * negativeComments.length)];
+      commentsArea.appendChild(flameDiv);
+      flameDiv.scrollIntoView({ behavior: "smooth" });
+      flameCount++;
+      if (flameCount >= 10) clearInterval(flameInterval); // 10コメントで止める
+    }, 400);
   }
+
+  div.className = className;
+  div.textContent = commentText;
+  commentsArea.appendChild(div);
+  div.scrollIntoView({ behavior: "smooth" });
+
+  totalComments++;
+  setTimeout(addComment, 3000 + Math.random() * 4000); // 3〜7秒ランダム
+}
   addComment();
 
   // 投稿後フォームリセット
